<resources>
    <string name="app_name">EasyNote</string>

    <string-array name="category">
        <item>全部备忘录</item>
        <item>我的收藏</item>
        <item>分类</item>
    </string-array>

    <string name="no_content">您未输入任何内容</string>
    <string name="contains_backspace">不能包含空格</string>
    <string name="category_exist">分类已存在</string>
    <string name="add_success">添加成功</string>
    <string name="add_failed">添加失败</string>
    <string name="no_category">未分类</string>
    <string name="add_note_title">写日记</string>
    <string name="select_category">设置分类</string>
    <string name="add_image">添加图片</string>


    <!--录音文字-->
    <string name="record_voice">录制音频</string>
    <string name="record_start">开 始 录 音</string>
    <string name="record_pose">暂 停 录 音</string>
    <string name="record_stop">停 止 录 音</string>
    <string name="record_play">播 放 录 音</string>
    <string name="record_cancel">保 存 录 音</string>
    <string name="title_activity_album">AlbumActivity</string>

    <!--dialog文字-->
    <string name="dialog_delete">删除</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_sure">确定</string>
    <string name="dialog_delete_note">确定删除该日记？</string>
    <string name="dialog_delete_category">确定删除该分类？</string>
</resources>
